--- a/toolkit/block-production-log/pallet/Cargo.toml
+++ b/toolkit/block-production-log/pallet/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-block-production-log"
-version.workspace = true
+version = "1.7.0"
 description = "Keeps log of slot to block producer id"
 license = "Apache-2.0"
 readme = "README.md"
@@ -19,8 +19,8 @@ frame-system = { workspace = true }
 log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
-sidechain-domain = { workspace = true }
-sp-block-production-log = { workspace = true }
+sidechain-domain = { workspace = true , version = "1.7.0" }
+sp-block-production-log = { workspace = true , version = "1.7.0" }
 sp-consensus-slots = { workspace = true, features = ["serde"] }
 sp-runtime = { workspace = true }
 sp-std = { workspace = true }
