--- a/substrate-extensions/partner-chains-session/Cargo.toml
+++ b/substrate-extensions/partner-chains-session/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-partner-chains-session"
-version.workspace = true
+version = "1.7.0"
 description = "FRAME pallet for setting validators with InherentData and session management"
 license = "Apache-2.0"
 authors.workspace = true
