--- a/toolkit/address-associations/pallet/Cargo.toml
+++ b/toolkit/address-associations/pallet/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-address-associations"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
@@ -17,7 +17,7 @@ frame-system = { workspace = true }
 log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
-sidechain-domain = { workspace = true }
+sidechain-domain = { workspace = true , version = "1.7.0" }
 sp-std = { workspace = true }
 hex-literal = { workspace = true, optional = true }
 sp-core = { workspace = true, optional = true }
