--- a/toolkit/block-producer-fees/pallet/Cargo.toml
+++ b/toolkit/block-producer-fees/pallet/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-block-producer-fees"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
