--- a/toolkit/block-producer-metadata/pallet/Cargo.toml
+++ b/toolkit/block-producer-metadata/pallet/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-block-producer-metadata"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
@@ -17,11 +17,11 @@ frame-system = { workspace = true }
 log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
-sidechain-domain = { workspace = true }
+sidechain-domain = { workspace = true , version = "1.7.0" }
 sp-std = { workspace = true }
 hex-literal = { workspace = true, optional = true }
 sp-core = { workspace = true, optional = true }
-sp-block-producer-metadata = { workspace = true }
+sp-block-producer-metadata = { workspace = true , version = "1.7.0" }
 sp-runtime = { workspace = true, optional = true }
 sp-io = { workspace = true, optional = true}
 
