--- a/toolkit/block-production-log/primitives/Cargo.toml
+++ b/toolkit/block-production-log/primitives/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sp-block-production-log"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
@@ -18,7 +18,7 @@ sp-core = { workspace = true, optional = true }
 sp-inherents = { workspace = true }
 sp-runtime = { workspace = true }
 thiserror = { workspace = true }
-sidechain-slots = { workspace = true }
+sidechain-slots = { workspace = true , version = "1.7.0" }
 
 [dev-dependencies]
 hex = { workspace = true }
