--- a/toolkit/committee-selection/authority-selection-inherents/Cargo.toml
+++ b/toolkit/committee-selection/authority-selection-inherents/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "authority-selection-inherents"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
@@ -17,14 +17,14 @@ async-trait = { workspace = true, optional = true }
 frame-support = { workspace = true }
 log = { workspace = true }
 minicbor = { workspace = true }
-sp-session-validator-management = { workspace = true }
+sp-session-validator-management = { workspace = true , version = "1.7.0" }
 parity-scale-codec = { workspace = true }
-plutus = { workspace = true }
-plutus-datum-derive = { workspace = true }
+plutus = { workspace = true , version = "1.7.0" }
+plutus-datum-derive = { workspace = true , version = "1.7.0" }
 scale-info = { workspace = true }
-selection = { workspace = true }
-sidechain-domain = { workspace = true }
-sidechain-slots = { workspace = true, optional = true }
+selection = { workspace = true , version = "1.7.0" }
+sidechain-domain = { workspace = true , version = "1.7.0" }
+sidechain-slots = { workspace = true, optional = true , version = "1.7.0" }
 sp-api = { workspace = true }
 sp-core = { workspace = true }
 sp-inherents = { workspace = true }
