--- a/toolkit/committee-selection/pallet/Cargo.toml
+++ b/toolkit/committee-selection/pallet/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-session-validator-management"
-version.workspace = true
+version = "1.7.0"
 description = "FRAME pallet for setting validators with InherentData using pallet-session"
 authors.workspace = true
 edition.workspace = true
@@ -24,12 +24,12 @@ frame-system = { workspace = true }
 sp-std = { workspace = true }
 sp-runtime = { workspace = true }
 sp-core = { workspace = true }
-sp-session-validator-management = { workspace = true }
+sp-session-validator-management = { workspace = true , version = "1.7.0" }
 sp-io = { workspace = true, optional = true }
-sidechain-domain = { workspace = true }
+sidechain-domain = { workspace = true , version = "1.7.0" }
 derive-new = { workspace = true, optional = true }
 pallet-session = { workspace = true, optional = true }
-pallet-partner-chains-session = { workspace = true, optional = true }
+pallet-partner-chains-session = { workspace = true, optional = true , version = "1.7.0" }
 
 [dev-dependencies]
 sp-io = { workspace = true }
