--- a/toolkit/committee-selection/primitives/Cargo.toml
+++ b/toolkit/committee-selection/primitives/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sp-session-validator-management"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
@@ -16,7 +16,7 @@ workspace = true
 scale-info = { workspace = true }
 parity-scale-codec = { workspace = true }
 serde = { workspace = true, optional = true }
-sidechain-domain = { workspace = true }
+sidechain-domain = { workspace = true , version = "1.7.0" }
 sp-api = { workspace = true }
 sp-core = { workspace = true }
 sp-inherents = { workspace = true }
