--- a/toolkit/committee-selection/selection/Cargo.toml
+++ b/toolkit/committee-selection/selection/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "selection"
-version.workspace = true
+version = "1.7.0"
 description = "Selection logic for sidechain validators"
 publish = false
 license = "Apache-2.0"
