--- a/toolkit/data-sources/db-sync/Cargo.toml
+++ b/toolkit/data-sources/db-sync/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "partner-chains-db-sync-data-sources"
-version.workspace = true
+version = "1.7.0"
 license = "Apache-2.0"
 authors.workspace = true
 edition.workspace = true
@@ -13,14 +13,14 @@ workspace = true
 
 [dependencies]
 sqlx = { workspace = true }
-db-sync-sqlx = { workspace = true }
+db-sync-sqlx = { workspace = true , version = "1.7.0" }
 tokio = { workspace = true, features = ["full"] }
 futures = { workspace = true }
 chrono = "0.4.31"
 hex = { workspace = true }
 hex-literal = { workspace = true }
 itertools = { workspace = true }
-sidechain-domain = { workspace = true, features = ["std", "serde"] }
+sidechain-domain = { workspace = true, features = ["std", "serde"] , version = "1.7.0" }
 serde = { workspace = true }
 serde_json = { workspace = true }
 bigdecimal = { workspace = true }
@@ -36,20 +36,20 @@ lru = { workspace = true }
 sp-timestamp = { workspace = true, features = ["std"] }
 sp-governed-map = { workspace = true, features = [
     "std",
-], optional = true }
+], optional = true , version = "1.7.0" }
 sp-native-token-management = { workspace = true, features = [
     "std",
-], optional = true }
-sidechain-mc-hash = { workspace = true, optional = true }
-pallet-sidechain-rpc = { workspace = true, optional = true }
+], optional = true , version = "1.7.0" }
+sidechain-mc-hash = { workspace = true, optional = true , version = "1.7.0" }
+pallet-sidechain-rpc = { workspace = true, optional = true , version = "1.7.0" }
 authority-selection-inherents = { workspace = true, features = [
     "std",
-], optional = true }
+], optional = true , version = "1.7.0" }
 cardano-serialization-lib = { workspace = true }
-partner-chains-plutus-data = { workspace = true }
+partner-chains-plutus-data = { workspace = true , version = "1.7.0" }
 sp-block-participation = { workspace = true, features = [
     "std",
-], optional = true }
+], optional = true , version = "1.7.0" }
 
 [dev-dependencies]
 tokio-test = "0.4.3"
