--- a/toolkit/native-token-management/pallet/Cargo.toml
+++ b/toolkit/native-token-management/pallet/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-native-token-management"
-version.workspace = true
+version = "1.7.0"
 description = "Pallet responsible for handling changes to the illiquid supply of the native token on main chain."
 license = "Apache-2.0"
 authors.workspace = true
@@ -19,8 +19,8 @@ frame-system = { workspace = true }
 log = { workspace = true }
 parity-scale-codec = { workspace = true }
 scale-info = { workspace = true }
-sp-native-token-management = { workspace = true, features = ["serde"] }
-sidechain-domain = { workspace = true }
+sp-native-token-management = { workspace = true, features = ["serde"] , version = "1.7.0" }
+sidechain-domain = { workspace = true , version = "1.7.0" }
 
 [dev-dependencies]
 sp-io = { workspace = true }
