--- a/toolkit/utils/db-sync-sqlx/Cargo.toml
+++ b/toolkit/utils/db-sync-sqlx/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "db-sync-sqlx"
-version.workspace = true
+version = "1.7.0"
 description = "sqlx support for Cardano Db-Sync queries"
 license = "Apache-2.0"
 authors.workspace = true
@@ -13,5 +13,5 @@ workspace = true
 
 [dependencies]
 sqlx = { workspace = true }
-sidechain-domain = { workspace = true, features = ["std"] }
+sidechain-domain = { workspace = true, features = ["std"] , version = "1.7.0" }
 num-traits = { workspace = true }
