--- a/Cargo.toml
+++ b/Cargo.toml
@@ -159,7 +159,7 @@ tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 uplc = { version = "1.1.6" }
 lru = { version = "0.14.0" }
 pretty_assertions = { version = "1.4.1" }
-derive_more = { version = "0.99.18" }
+derive_more = { version = "2.0.1", default-features = false }
 num-derive = { version = "0.4.2" }
 env_logger = { version = "0.11.8" }
 bigdecimal = { version = "0.4.8" }
