--- a/toolkit/sidechain/domain/Cargo.toml
+++ b/toolkit/sidechain/domain/Cargo.toml
@@ -21,7 +21,7 @@ plutus-datum-derive = { workspace = true }
 serde = { workspace = true, optional = true }
 byte-string-derive = { workspace = true }
 hex = { workspace = true }
-derive_more = { workspace = true }
+derive_more = { workspace = true, features = ["from", "from_str", "into"] }
 num-traits = { workspace = true }
 num-derive = { workspace = true }
 sp-std = { workspace = true }
